Add Docker, add typeorm and change project struture.
