# src/routes/specifications.routes.ts
@@ -1,12 +1,14 @@
 import { Router } from 'express';
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
-import { listSpecificationsController } from '../modules/cars/useCases/listSpecifications';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
+import { ListSpecificationsController } from '../modules/cars/useCases/listSpecifications/ListSpecificationsController';
 
 const specificationsRoutes = Router();
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.post('/', (request, response) => { createSpecificationController.handle(request, response); });
+specificationsRoutes.post('/', createSpecificationController.handle);
 
-specificationsRoutes.get('/', (request, response) => listSpecificationsController.handle(request, response));
+specificationsRoutes.get('/', listSpecificationsController.handle);
 
 export { specificationsRoutes };
